--- a/alternative covers/index.html
+++ b/alternative covers/index.html
@@ -44,32 +44,32 @@ body {
 
 
 .slide:first-child {
-  background: url("https://static.wikia.nocookie.net/taylor-swift/images/b/b6/Taylor_Swift_folkore_in_the_weeds_edition.png") no-repeat
+  background: url("https://static.wikia.nocookie.net/taylor-swift/images/b/b6/Taylor_Swift_folkore_in_the_weeds_edition.png/revision/latest/scale-to-width-down/1000?cb=20230202120317") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("https://static.wikia.nocookie.net/taylor-swift/images/6/67/Taylor_Swift_folkore_meet_me_behind_the_mall_edition.png") no-repeat
+  background: url("https://static.wikia.nocookie.net/taylor-swift/images/6/67/Taylor_Swift_folkore_meet_me_behind_the_mall_edition.png/revision/latest/scale-to-width-down/1000?cb=20230202130437") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("https://static.wikia.nocookie.net/taylor-swift/images/d/db/Taylor_Swift_folkore_betty%27s_garden_edition.png") no-repeat
+  background: url("https://static.wikia.nocookie.net/taylor-swift/images/d/db/Taylor_Swift_folkore_betty%27s_garden_edition.png/revision/latest/scale-to-width-down/1000?cb=20230202130818") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(4) {
-  background: url("https://static.wikia.nocookie.net/taylor-swift/images/7/78/Taylor_Swift_folkore_stolen_lullabies_edition.png") no-repeat
+  background: url("https://static.wikia.nocookie.net/taylor-swift/images/7/78/Taylor_Swift_folkore_stolen_lullabies_edition.png/revision/latest/scale-to-width-down/1000?cb=20230202130908") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(5) {
-  background: url("https://static.wikia.nocookie.net/taylor-swift/images/0/0c/Taylor_Swift_folkore_hide-and-seek_edition.png") no-repeat
+  background: url("https://static.wikia.nocookie.net/taylor-swift/images/0/0c/Taylor_Swift_folkore_hide-and-seek_edition.png/revision/latest/scale-to-width-down/1000?cb=20230202130945") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(6) {
-  background: url("https://static.wikia.nocookie.net/taylor-swift/images/9/91/Taylor_Swift_folkore_running_like_water_edition.png") no-repeat
+  background: url("https://static.wikia.nocookie.net/taylor-swift/images/9/91/Taylor_Swift_folkore_running_like_water_edition.png/revision/latest/scale-to-width-down/1000?cb=20230202131006") no-repeat
     center top/cover;
 }
 
